--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Rust
+target/
+debug/
+release/
+*.rs.bk
+*.rlib
+*.prof*
+Cargo.lock
+
 # Cabal build artifacts
 dist-newstyle/
 dist/
@@ -25,6 +34,11 @@ cabal.sandbox.config
 *.swo
 *~
 .DS_Store
+Thumbs.db
 
-# Other
+# Environment files
+.env*
 .ghc.environment.*
+
+# Logs
+*.log
