--- a/crates/pattern-core/Cargo.toml
+++ b/crates/pattern-core/Cargo.toml
@@ -14,8 +14,13 @@ serde_json = { workspace = true }
 [dev-dependencies]
 proptest = { workspace = true }
 insta = { workspace = true }
+criterion = { version = "0.5", features = ["html_reports"] }
 
 [lib]
 name = "pattern_core"
 path = "src/lib.rs"
+
+[[bench]]
+name = "fold_benchmarks"
+harness = false
 
