--- a/crates/gram-codec/Cargo.toml
+++ b/crates/gram-codec/Cargo.toml
@@ -10,10 +10,13 @@ description = "Bidirectional codec between Gram notation and Pattern data struct
 [dependencies]
 pattern-core = { path = "../pattern-core" }
 nom = "7"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 thiserror.workspace = true
 
 # WASM support
 wasm-bindgen = { version = "0.2", optional = true }
+serde-wasm-bindgen = { version = "0.6", optional = true }
 
 # Python support
 pyo3 = { version = "0.23", optional = true, features = ["extension-module"] }
@@ -25,7 +28,7 @@ proptest = "1.0"
 
 [features]
 default = []
-wasm = ["wasm-bindgen"]
+wasm = ["wasm-bindgen", "serde-wasm-bindgen"]
 python = ["pyo3"]
 
 [lib]
