--- a/crates/gram-codec/pyproject.toml
+++ b/crates/gram-codec/pyproject.toml
@@ -24,6 +24,16 @@ classifiers = [
     "Topic :: Software Development :: Libraries",
 ]
 
+[project.optional-dependencies]
+# Install with: uv pip install -e ".[dev]"
+dev = [
+    "maturin>=1.0,<2.0",
+    "pytest>=7.0",
+    "pytest-cov>=4.0",
+    "mypy>=1.0",
+    "pyright>=1.1",
+]
+
 [tool.maturin]
 features = ["python"]
 module-name = "gram_codec"
