--- a/crates/pattern-core/pyproject.toml
+++ b/crates/pattern-core/pyproject.toml
@@ -25,10 +25,13 @@ classifiers = [
 ]
 
 [project.optional-dependencies]
+# Install with: uv pip install -e ".[dev]"
 dev = [
     "maturin>=1.0,<2.0",
     "pytest>=7.0",
     "pytest-cov>=4.0",
+    "mypy>=1.0",
+    "pyright>=1.1",
 ]
 
 [tool.maturin]
